--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "serve": "vite preview",
     "lint": "eslint -c ./.eslintrc.js ./src",
     "lint-fix": "eslint -c ./.eslintrc.js ./src --fix",
-    "lint-tsc": "vue-tsc --noEmit --skipLibCheck"
+    "lint-tsc": "vue-tsc --noEmit --skipLibCheck --locale zh-cn"
   },
   "dependencies": {
     "@vueuse/core": "^9.3.0",
@@ -18,7 +18,8 @@
     "pinia": "^2.0.23",
     "vfonts": "^0.0.3",
     "vue": "^3.2.41",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vue-i18n": "^9.2.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.186",
@@ -58,7 +59,6 @@
     "*.{vue,js,ts,tsx}": [
       "eslint -c ./.eslintrc.js ./src --fix",
       "eslint -c ./.eslintrc.js ./src",
-      "vue-tsc --noEmit --skipLibCheck",
       "git add ."
     ]
   },
