--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.0",
     "vue-eslint-parser": "^9.1.0",
-    "vue-tsc": "^1.0.7"
+    "vue-tsc": "^1.0.7",
+    "mockjs": "^1.1.0",
+    "vite-plugin-mock": "^2.9.6"
   },
   "husky": {
     "hooks": {
