--- a/package.json
+++ b/package.json
@@ -8,49 +8,52 @@
     "serve": "vite preview",
     "lint": "eslint -c ./.eslintrc.js ./src",
     "lint-fix": "eslint -c ./.eslintrc.js ./src --fix",
-    "lint-tsc": "vue-tsc --noEmit --skipLibCheck --locale zh-cn"
+    "lint-tsc": "vue-tsc --noEmit --skipLibCheck --locale zh-cn",
+    "husky-init": "husky install"
   },
   "dependencies": {
-    "@vueuse/core": "^9.3.0",
-    "axios": "^0.27.2",
+    "@vueuse/core": "^9.8.2",
+    "axios": "^1.2.1",
     "lodash-es": "^4.17.21",
-    "naive-ui": "^2.33.5",
-    "pinia": "^2.0.23",
+    "naive-ui": "^2.34.2",
+    "pinia": "^2.0.28",
     "vfonts": "^0.0.3",
-    "vue": "^3.2.41",
-    "vue-router": "^4.1.5",
-    "vue-i18n": "^9.2.2"
+    "vue": "^3.2.45",
+    "vue-i18n": "^9.2.2",
+    "vue-router": "^4.1.6",
+    "crypto-js": "^4.1.1"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.186",
+    "@types/crypto-js": "^4.1.1",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^16",
     "@vicons/antd": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
-    "@vitejs/plugin-vue": "^3.1.2",
-    "@vitejs/plugin-vue-jsx": "^2.0.1",
-    "@vue/compiler-sfc": "^3.2.41",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.0",
+    "@vue/compiler-sfc": "^3.2.45",
     "@vue/eslint-config-typescript": "^11.0.2",
-    "autoprefixer": "^10.4.12",
-    "typescript": "~4.7.4",
-    "eslint": "^8.25.0",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-define-config": "^1.7.0",
+    "eslint-define-config": "^1.12.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.6.0",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "postcss": "^8.4.16",
-    "prettier": "^2.7.1",
-    "sass": "^1.55.0",
-    "tailwindcss": "^3.1.8",
-    "unplugin-vue-components": "^0.22.8",
-    "vite": "^3.1.8",
+    "eslint-plugin-vue": "^9.8.0",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.1.0",
+    "mockjs": "^1.1.0",
+    "postcss": "^8.4.20",
+    "prettier": "^2.8.1",
+    "sass": "^1.57.1",
+    "tailwindcss": "^3.2.4",
+    "typescript": "~4.7.4",
+    "unplugin-vue-components": "^0.22.12",
+    "vite": "^4.0.2",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.0",
+    "vite-plugin-mock": "^2.9.6",
     "vue-eslint-parser": "^9.1.0",
-    "vue-tsc": "^1.0.7",
-    "mockjs": "^1.1.0",
-    "vite-plugin-mock": "^2.9.6"
+    "vue-tsc": "^1.0.16"
   },
   "husky": {
     "hooks": {
